tests/baselines/reference/superCallBeforeThisAccessing7.errors.txt
superCallBeforeThisAccessing7.ts(2,17): error TS7006: Parameter 'c' implicitly has an 'any' type.
superCallBeforeThisAccessing7.ts(5,13): error TS7008: Member '_t' implicitly has an 'any' type.
superCallBeforeThisAccessing7.ts(8,16): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== superCallBeforeThisAccessing7.ts (3 errors) ====
    class Base {
        constructor(c) { }
                    ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    }
    class D extends Base {
        private _t;
                ~~
!!! error TS7008: Member '_t' implicitly has an 'any' type.
        constructor() {
            let x = {
                j: this._t,
                   ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            }
            super(undefined);
        }
    }
    